feat: update experience and skills sections of resume

--- a/resume.tex
+++ b/resume.tex
@@ -210,8 +210,11 @@
 
         \resumeSubheading
             {Bain \& Company (BCN)}{Jan, 2025 -- Present} 
-            {\uniformunderline{Analyst, Intern} $|$ \textnormal{Python, Pandas, FastAPI, Azure, Docker, Plotly-Dash, NextJS } } {On-site}
+            {\uniformunderline{Analyst} $|$ \textnormal{Python, Pandas, SQL, PySpark, FastAPI, Azure, Docker, Plotly-Dash, NextJS } } {On-site}
             \resumeItemListStart
+                \resumeItem{\normalsize{Built and deployed a Python \& SparkSQL ETL framework on GCP (Dataproc, BigQuery) for a large US retailer, using PyTest \& GitHub Actions for CI/CD and a client-internal orchestration tool for pipeline scheduling.}}
+                \resumeItem{\normalsize{Integrated pipeline execution with a client-internal orchestration system, validated in production cloud environments, and led on-site handover sessions (20 hrs).}}
+                \resumeItem{\normalsize{Implemented a DuckDB- and SQL-based ETL pipeline for a UK \& Ireland retailer, orchestrating SQL execution via Python for lightweight analytics workloads.}}
                 \resumeItem{\normalsize{Developed dashboards using Python, Pandas, and Plotly-Dash/ReactJS migrating out of Tableau, with a projected savings opportunity of \$200K per annum in licensing costs.}}
                 \resumeItem{\normalsize{Deployed and maintained multiple tools with Docker and Azure. Optimized existing tools' performance (10x latency reduction) and scalability (multi-user support and load balancing).}}
                 \resumeItem{\normalsize{Intergated AI into toolkits using OpenAI Chat \& Responses APIs, LangChain, and LangGraph.}}
@@ -340,7 +343,7 @@
     \begin{itemize}[leftmargin=0in, label={}]
         \small{\item{
         \resumeItemListStart
-            \resumeItem{\textbf{\normalsize{Technologies and Frameworks:}}{ \normalsize{Git, Docker, AWS, Azure, FastAPI, Pandas, NextJS, ReactJS, Plotly-Dash, Redis, OpenAI API, LangChain, LangGraph, Alteryx, Tableau, PowerBI, BurpSuite, Nessus, Ghidra, Metasploit, JohnTheRipper, Gobuster, Exiftool, Infoga, ReconDog}}} \vspace{2.5pt} \\
+            \resumeItem{\textbf{\normalsize{Technologies and Frameworks:}}{ \normalsize{Git, Docker, AWS, Azure, FastAPI, PySpark, Pandas, NextJS, ReactJS, Plotly-Dash, Redis, OpenAI API, LangChain, LangGraph, Alteryx, Tableau, PowerBI, BurpSuite, Nessus, Ghidra, Metasploit, JohnTheRipper, Gobuster, Exiftool, Infoga, ReconDog}}} \vspace{2.5pt} \\
 
             \resumeItem{\textbf{\normalsize{Languages:}}{ \normalsize{Python, Shell Scripting, C/C++, Go, Java, TypeScript, SQL, NoSQL, R}}} \vspace{2.5pt} \\
 
