fix: spelling error in work experience (BCN) section

--- a/resume.tex
+++ b/resume.tex
@@ -217,9 +217,9 @@
                 \resumeItem{\normalsize{Implemented a DuckDB- and SQL-based ETL pipeline for a UK \& Ireland retailer, orchestrating SQL execution via Python for lightweight analytics workloads.}}
                 \resumeItem{\normalsize{Developed dashboards using Python, Pandas, and Plotly-Dash/ReactJS migrating out of Tableau, with a projected savings opportunity of \$200K per annum in licensing costs.}}
                 \resumeItem{\normalsize{Deployed and maintained multiple tools with Docker and Azure. Optimized existing tools' performance (10x latency reduction) and scalability (multi-user support and load balancing).}}
-                \resumeItem{\normalsize{Intergated AI into toolkits using OpenAI Chat \& Responses APIs, LangChain, and LangGraph.}}
-            \resumeItemListEnd  
-    
+                \resumeItem{\normalsize{Integrated AI into toolkits using OpenAI Chat- \& Responses-APIs, LangChain, and LangGraph.}}
+            \resumeItemListEnd
+
         \resumeSubheading
             {Stealth Startup}{June, 2024 -- Dec, 2024} 
             {\uniformunderline{Freelance} $|$ \textnormal{AWS, Django, PyTest, Nginx, Docker \href{https://github.com/saharshbhansali/supabase-decoupled-postgres}{\raisebox{-0.05\height}\faExternalLink} } }{Remote}
