fix: certifications section - reformat (fix alignment issues) and reword header

--- a/resume.tex
+++ b/resume.tex
@@ -358,19 +358,23 @@
 
 
 %-----------CERTIFICATIONS and ACHIEVEMENTS---------------
-\section{CERTIFICATIONS AND ACHIEVEMENTS}
+% \section{CERTIFICATIONS AND ACHIEVEMENTS}
+\section{CERTIFICATIONS}
 \vspace{2.5pt}
-\resumeItemListStart 
-    \resumeItem{\href{https://www.credly.com/badges/dc22fd53-b367-4c97-b2ef-066a59371946/public_url}{\textbf{Solutions Architect Associate (SAA-C03)} - Amazon Web Services (AWS) {\raisebox{-0.1\height}\faExternalLink }}} \vspace{-3pt}
-    
-    \resumeItem{\href{https://www.credly.com/badges/d0f572c3-7d2c-416c-803d-4963611704f5/public_url}{\textbf{Certified Cloud Practitioner (CLF-C02)} - Amazon Web Services (AWS) {\raisebox{-0.1\height}\faExternalLink }}} \vspace{-3pt}
-    
-    %\resumeItem{\normalsize{2023 Yantra "Main Hack" - Education Track Winner (\href{https://github.com/kaushalrathi24/funtimeError}{Career Node}), VIT - Vellore \href{https://github.com/kaushalrathi24/funtimeError}{\raisebox{-0.1\height}\faExternalLink }}} \vspace{-3pt}
-    
-    %\resumeItem{\href{certificateLink.com}{Certified Ethical Hacker (CEH) - EC-Council (Pursuing)}} \vspace{-3pt}
-    
-\resumeItemListEnd
-\vspace{-2pt}
+\begin{itemize}[leftmargin=0in, label={}]
+\item{
+    \resumeItemListStart 
+        \resumeItem{\normalsize{\href{https://www.credly.com/badges/dc22fd53-b367-4c97-b2ef-066a59371946/public_url}{\textbf{Solutions Architect Associate (SAA-C03)} - Amazon Web Services (AWS) {\raisebox{-0.1\height}\faExternalLink }}}} \vspace{0.5pt}
+        
+        \resumeItem{\normalsize{\href{https://www.credly.com/badges/d0f572c3-7d2c-416c-803d-4963611704f5/public_url}{\textbf{Certified Cloud Practitioner (CLF-C02)} - Amazon Web Services (AWS) {\raisebox{-0.1\height}\faExternalLink }}}} \vspace{0.5pt}
+        
+        %\resumeItem{\normalsize{2023 Yantra "Main Hack" - Education Track Winner (\href{https://github.com/kaushalrathi24/funtimeError}{Career Node}), VIT - Vellore \href{https://github.com/kaushalrathi24/funtimeError}{\raisebox{-0.1\height}\faExternalLink }}} \vspace{-3pt}
+        
+        %\resumeItem{\href{certificateLink.com}{Certified Ethical Hacker (CEH) - EC-Council (Pursuing)}} \vspace{-3pt}
+    \resumeItemListEnd
+}
+\end{itemize}
+\vspace{-2.5pt}
 
 
 
