fix: remove yantra hack from certs section

--- a/resume.tex
+++ b/resume.tex
@@ -365,7 +365,7 @@
     
     \resumeItem{\href{https://www.credly.com/badges/d0f572c3-7d2c-416c-803d-4963611704f5/public_url}{\textbf{Certified Cloud Practitioner (CLF-C02)} - Amazon Web Services (AWS) {\raisebox{-0.1\height}\faExternalLink }}} \vspace{-3pt}
     
-    \resumeItem{\normalsize{2023 Yantra "Main Hack" - Education Track Winner (\href{https://github.com/kaushalrathi24/funtimeError}{Career Node}), VIT - Vellore \href{https://github.com/kaushalrathi24/funtimeError}{\raisebox{-0.1\height}\faExternalLink }}} \vspace{-3pt}
+    %\resumeItem{\normalsize{2023 Yantra "Main Hack" - Education Track Winner (\href{https://github.com/kaushalrathi24/funtimeError}{Career Node}), VIT - Vellore \href{https://github.com/kaushalrathi24/funtimeError}{\raisebox{-0.1\height}\faExternalLink }}} \vspace{-3pt}
     
     %\resumeItem{\href{certificateLink.com}{Certified Ethical Hacker (CEH) - EC-Council (Pursuing)}} \vspace{-3pt}
     
