fix: technical skills - alignment and text size issues

--- a/resume.tex
+++ b/resume.tex
@@ -341,17 +341,17 @@
 \section{TECHNICAL SKILLS}
     \vspace{2.5pt}
     \begin{itemize}[leftmargin=0in, label={}]
-        \small{\item{
+    \item{
         \resumeItemListStart
-            \resumeItem{\textbf{\normalsize{Technologies and Frameworks:}}{ \normalsize{Git, Docker, AWS, Azure, FastAPI, PySpark, Pandas, NextJS, ReactJS, Plotly-Dash, Redis, OpenAI API, LangChain, LangGraph, Alteryx, Tableau, PowerBI, BurpSuite, Nessus, Ghidra, Metasploit, JohnTheRipper, Gobuster, Exiftool, Infoga, ReconDog}}} \vspace{2.5pt} \\
+            \resumeItem{\normalsize{\textbf{Technologies and Frameworks:} Git, Docker, AWS, Azure, FastAPI, PySpark, Pandas, NextJS, ReactJS, Plotly-Dash, Redis, OpenAI API, LangChain, LangGraph, Alteryx, Tableau, PowerBI, BurpSuite, Nessus, Ghidra, Metasploit, JohnTheRipper, Gobuster, Exiftool, Infoga, ReconDog}} \vspace{0.5pt} \\
 
-            \resumeItem{\textbf{\normalsize{Languages:}}{ \normalsize{Python, Shell Scripting, C/C++, Go, Java, TypeScript, SQL, NoSQL, R}}} \vspace{2.5pt} \\
+            \resumeItem{\normalsize{\textbf{Languages:} Python, Shell Scripting, C/C++, Go, Java, TypeScript, SQL, NoSQL, R}} \vspace{0.5pt} \\
 
-            \resumeItem{\textbf{\normalsize{Developer Tools:}}{ \normalsize{VMWare, VirtualBox, Linux, GitHub, Neovim, Excel}}} \vspace{2.5pt} \\
+            \resumeItem{\normalsize{\textbf{Developer Tools:} VMWare, VirtualBox, Linux, GitHub, Neovim, Excel}} \vspace{0.5pt} \\
 
             % \resumeItem{\textbf{\normalsize{Design:}}{ \normalsize{Figma, Photoshop, Illustrator, Canva}}}
         \resumeItemListEnd
-        }}
+        }
     \end{itemize}
     \vspace{-5pt}
 
