fix: external link box icon sizes

--- a/resume.tex
+++ b/resume.tex
@@ -222,17 +222,17 @@
 
         \resumeSubheading
             {Stealth Startup}{June, 2024 -- Dec, 2024} 
-            {\uniformunderline{Freelance} $|$ \textnormal{AWS, Django, PyTest, Nginx, Docker \href{https://github.com/saharshbhansali/supabase-decoupled-postgres}{\raisebox{-0.05\height}\faExternalLink} } }{Remote}
+            {\uniformunderline{Freelance} $|$ \textnormal{AWS, Django, PyTest, Nginx, Docker \href{https://github.com/saharshbhansali/supabase-decoupled-postgres}{\footnotesize{\raisebox{-0.05\height}\faExternalLink}}} }{Remote}
             \resumeItemListStart
                 \resumeItem{\normalsize{Provisioned cloud and security infrastructure. Set up API servers and reverse-proxy for different endpoints.}}
                 \resumeItem{\normalsize{\href{https://github.com/saharshbhansali/supabase-decoupled-postgres}{Dockerized and self-hosted a Supabase instance}, with an externally managed Postgres database on a local docker network. Integrated API with Supabase (Database, Realtime, \& Auth.)}} 
-                % \href{https://github.com/saharshbhansali/supabase-decoupled-postgres}{\raisebox{-0.1\height}\faExternalLink}
+                % \href{https://github.com/saharshbhansali/supabase-decoupled-postgres}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}}
                 \resumeItem{\normalsize{Created a test suite to unit-test the API using PyTest and Django's testing framework.}}
             \resumeItemListEnd  
 
     
         % \resumeSubheading
-        %     {Company Name \href{certificate Link}{\raisebox{-0.1\height}\faExternalLink }}{MM YYYY -- MM YYYY} 
+        %     {Company Name \href{certificate Link}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}}}{MM YYYY -- MM YYYY} 
         %     {\uniformunderline{Role Name}}{city, country}
         %     \resumeItemListStart
         %         \resumeItem{\normalsize{About the role \textbf{and responsibilities carried out.}}}
@@ -252,7 +252,7 @@
     \resumeSubHeadingListStart
 
         \resumeProjectHeading
-            {\href{https://github.com/saharshbhansali/bohemian-backend}{\textbf{\large{Decentralized Voting}} \href{https://github.com/saharshbhansali/bohemian-backend}{\raisebox{-0.1\height}\faExternalLink }} $|$ \normalsize{FastAPI, PyTest, Docker,  \href{https://colab.research.google.com/github/saharshbhansali/bohemian-referendums/blob/main/ranked-choice.ipynb}{\textbf{Jupyter Notebook}}} {\raisebox{-0.1\height}\faExternalLink}}{Sept, 2024 -- Nov, 2024}
+            {\href{https://github.com/saharshbhansali/bohemian-backend}{\textbf{\large{Decentralized Voting}} \href{https://github.com/saharshbhansali/bohemian-backend}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}}} $|$ \normalsize{FastAPI, PyTest, Docker,  \href{https://colab.research.google.com/github/saharshbhansali/bohemian-referendums/blob/main/ranked-choice.ipynb}{\textbf{Jupyter Notebook}}} {\footnotesize{\raisebox{-0.1\height}\faExternalLink}}}{Sept, 2024 -- Nov, 2024}
             \vspace{-11pt}
             \resumeItemListStart
                 \resumeItem{\normalsize{Built an API for a decentralized referendum platform using alternative voting systems.}} 
@@ -264,7 +264,7 @@
             \vspace{-12.5pt}
 
         \resumeProjectHeading
-            {\href{https://cli-top.acmvit.in}{\textbf{\large{CLI - Top}} \href{https://cli-top.acmvit.in}{\raisebox{-0.1\height}\faExternalLink }} $|$ \normalsize{\href{https://github.com/ACM-VIT/cli-top}{Go, Cobra, Glamour, GitHub Actions, BurpSuite}}\textcolor{blue}{\small{\textit{*}}}}{Dec, 2023 - Jan, 2024}
+            {\href{https://cli-top.acmvit.in}{\textbf{\large{CLI - Top}} \href{https://cli-top.acmvit.in}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}}} $|$ \normalsize{\href{https://github.com/ACM-VIT/cli-top}{Go, Cobra, Glamour, GitHub Actions, BurpSuite}}\textcolor{blue}{\small{\textit{*}}}}{Dec, 2023 - Jan, 2024}
             \vspace{-11pt}
             \resumeItemListStart
                 \resumeItem{\normalsize{\textbf{Unofficial} CLI to access the university's Learning Management System (LMS); used by 400+ students.}} 
@@ -274,7 +274,7 @@
             \vspace{-12.5pt}
       
         % \resumeProjectHeading
-        %     {\href{https://github.com/saharshbhansali/TallyStock}{\textbf{\large{Inventory Management System}} \href{https://github.com/saharshbhansali/TallyStock}{\raisebox{-0.1\height}\faExternalLink }} $|$ \normalsize{Go, NextJS, TypeScript, TailwindCSS, Docker}}{Sept, 2023 - Dec, 2023}
+        %     {\href{https://github.com/saharshbhansali/TallyStock}{\textbf{\large{Inventory Management System}} \href{https://github.com/saharshbhansali/TallyStock}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}}} $|$ \normalsize{Go, NextJS, TypeScript, TailwindCSS, Docker}}{Sept, 2023 - Dec, 2023}
         %     \vspace{-11pt}
         %     \resumeItemListStart
         %         \resumeItem{\normalsize{Experimental inventory management system, to self-learn full stack development.}} 
@@ -286,7 +286,7 @@
         %     \vspace{-15pt}
 
         % \resumeProjectHeading
-        %     {\href{https://github.com/kaushalrathi24/funtimeError}{\textbf{\large{Career Node}} \href{https://github.com/kaushalrathi24/funtimeError}{\raisebox{-0.1\height}\faExternalLink }} $|$ \normalsize{OpenAI GPT-3.5 API, TypeScript, Flask}}{June, 2023}
+        %     {\href{https://github.com/kaushalrathi24/funtimeError}{\textbf{\large{Career Node}} \href{https://github.com/kaushalrathi24/funtimeError}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}}} $|$ \normalsize{OpenAI GPT-3.5 API, TypeScript, Flask}}{June, 2023}
         %     \vspace{-11pt}
         %     \resumeItemListStart
         %         \resumeItem{\normalsize{Integrated the OpenAI GPT-3.5 API for personalizing responses to users' resumes.}} 
@@ -297,7 +297,7 @@
         %     \vspace{-14pt}
 
         % \resumeProjectHeading
-        %     {\href{https://github.com/ACM-VIT/accessDenied}{\textbf{\large{Access Denied}} \href{https://github.com/ACM-VIT/accessDenied}{\raisebox{-0.1\height}\faExternalLink }} $|$ \normalsize{Python, JavaScript, \href{https://colab.research.google.com/drive/1oTl9P42TniMFApstGZ4R4WLa_jZR1WrS}{\textbf{Jupyter Notebook}}} {\raisebox{-0.1\height}\faExternalLink}}{Dec, 2022}
+        %     {\href{https://github.com/ACM-VIT/accessDenied}{\textbf{\large{Access Denied}} \href{https://github.com/ACM-VIT/accessDenied}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}}} $|$ \normalsize{Python, JavaScript, \href{https://colab.research.google.com/drive/1oTl9P42TniMFApstGZ4R4WLa_jZR1WrS}{\textbf{Jupyter Notebook}}} {\footnotesize{\raisebox{-0.1\height}\faExternalLink}}}{Dec, 2022}
         %     \vspace{-11pt}
         %     \resumeItemListStart
         %         \resumeItem{\normalsize{Built a decentralized authentication system from scratch using Zero-Knowledge Proofs (ZKPs).}} 
@@ -312,19 +312,19 @@
         %     \vspace{-11pt}
         %     \resumeItemListStart 
 
-        %         \resumeItem{\normalsize{\href{https://github.com/saharshbhansali/.dotfiles}{\textbf{System Administration}} \href{https://github.com/saharshbhansali/.dotfiles}{\raisebox{-0.1\height}\faExternalLink } $|$ Shell Scripting, Chezmoi, GNU Stow, Nix, Ansible: A development setup and streamlined workflow, with automated configuration management, rapidly deployable on multiple platforms.}} \vspace{-11pt} \
+        %         \resumeItem{\normalsize{\href{https://github.com/saharshbhansali/.dotfiles}{\textbf{System Administration}} \href{https://github.com/saharshbhansali/.dotfiles}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}} $|$ Shell Scripting, Chezmoi, GNU Stow, Nix, Ansible: A development setup and streamlined workflow, with automated configuration management, rapidly deployable on multiple platforms.}} \vspace{-11pt} \
 
         %         \resumeItem{\normalsize{\textbf{Home Labs, CTFs, and Bug Bounties} $|$ BurpSuite, Ghidra, Metasploit, JohnTheRipper, Gobuster, Exiftool, ReconDog, VirtualBox, ParrotOS, Kali Linux: Learning cyber-security through hands-on exercises.}} \vspace{-12.5pt} \
 
-        %         % \resumeItem{\normalsize{\href{https://saharshbhansali.github.io/about-me/}{\textbf{Personal Site}} \href{https://saharshbhansali.github.io/about-me/}{\raisebox{-0.1\height}\faExternalLink} $|$ Jekyll, Markdown, GitHub Pages, LaTeX: A static website to showcase my professional profile and skills.}} \ 
+        %         % \resumeItem{\normalsize{\href{https://saharshbhansali.github.io/about-me/}{\textbf{Personal Site}} \href{https://saharshbhansali.github.io/about-me/}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}} $|$ Jekyll, Markdown, GitHub Pages, LaTeX: A static website to showcase my professional profile and skills.}} \ 
 
-        %         % \resumeItem{\normalsize{\href{https://gist.github.com/saharshbhansali/5da604f1731c7d5ea07b2bd91552d48c}{\textbf{Obsidian Notes}} \href{https://gist.github.com/saharshbhansali/5da604f1731c7d5ea07b2bd91552d48c}{\raisebox{-0.1\height}\faExternalLink}: A formatting guide for a note-taking app, Obsidian.}} \
+        %         % \resumeItem{\normalsize{\href{https://gist.github.com/saharshbhansali/5da604f1731c7d5ea07b2bd91552d48c}{\textbf{Obsidian Notes}} \href{https://gist.github.com/saharshbhansali/5da604f1731c7d5ea07b2bd91552d48c}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}}: A formatting guide for a note-taking app, Obsidian.}} \
 
         %     \resumeItemListEnd
         %     \vspace{-15pt}
 
         % \resumeProjectHeading
-        %     {\href{https://github.com/saharshbhansali/.dotfiles}{\textbf{\large{\uniformunderline{System Administration}}} \href{https://github.com/saharshbhansali/.dotfiles}{\raisebox{-0.1\height}\faExternalLink }} $|$ \normalsize{\uniformunderline{Shell Scripting, Python, Configuration Files}}}{Dec, 2022}
+        %     {\href{https://github.com/saharshbhansali/.dotfiles}{\textbf{\large{\uniformunderline{System Administration}}} \href{https://github.com/saharshbhansali/.dotfiles}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}}} $|$ \normalsize{\uniformunderline{Shell Scripting, Python, Configuration Files}}}{Dec, 2022}
         %     \vspace{-9pt}
         %     \resumeItemListStart
         %         \resumeItem{\normalsize{Linux, Windows, and VPS system configurations and workflows for streamlined administration of personal workspaces.}}
@@ -364,11 +364,11 @@
 \begin{itemize}[leftmargin=0in, label={}]
 \item{
     \resumeItemListStart 
-        \resumeItem{\normalsize{\href{https://www.credly.com/badges/dc22fd53-b367-4c97-b2ef-066a59371946/public_url}{\textbf{Solutions Architect Associate (SAA-C03)} - Amazon Web Services (AWS) {\raisebox{-0.1\height}\faExternalLink }}}} \vspace{0.5pt}
+        \resumeItem{\normalsize{\href{https://www.credly.com/badges/dc22fd53-b367-4c97-b2ef-066a59371946/public_url}{\textbf{Solutions Architect Associate (SAA-C03)} - Amazon Web Services (AWS) {\footnotesize{\raisebox{-0.1\height}\faExternalLink}}}}} \vspace{0.5pt}
         
-        \resumeItem{\normalsize{\href{https://www.credly.com/badges/d0f572c3-7d2c-416c-803d-4963611704f5/public_url}{\textbf{Certified Cloud Practitioner (CLF-C02)} - Amazon Web Services (AWS) {\raisebox{-0.1\height}\faExternalLink }}}} \vspace{0.5pt}
+        \resumeItem{\normalsize{\href{https://www.credly.com/badges/d0f572c3-7d2c-416c-803d-4963611704f5/public_url}{\textbf{Certified Cloud Practitioner (CLF-C02)} - Amazon Web Services (AWS) {\footnotesize{\raisebox{-0.1\height}\faExternalLink}}}}} \vspace{0.5pt}
         
-        %\resumeItem{\normalsize{2023 Yantra "Main Hack" - Education Track Winner (\href{https://github.com/kaushalrathi24/funtimeError}{Career Node}), VIT - Vellore \href{https://github.com/kaushalrathi24/funtimeError}{\raisebox{-0.1\height}\faExternalLink }}} \vspace{-3pt}
+        % \resumeItem{\normalsize{2023 Yantra "Main Hack" - Education Track Winner (\href{https://github.com/kaushalrathi24/funtimeError}{Career Node}), VIT - Vellore \href{https://github.com/kaushalrathi24/funtimeError}{\footnotesize{\raisebox{-0.1\height}\faExternalLink}}}} \vspace{-3pt}
         
         %\resumeItem{\href{certificateLink.com}{Certified Ethical Hacker (CEH) - EC-Council (Pursuing)}} \vspace{-3pt}
     \resumeItemListEnd
